# monitor.vision.msc.ufba.br

./: .gitignore  Jenkinsfile  README.md  comandos.txt  dockerfile  get_model.py  mypy.ini  prometheus.yaml  pylintrc  pyproject.toml  video_capture.py  vision_deployment_doc.md
monitor/: commands to run on GPU  get_ip_address.py  get_screen.py  mqtt_listener.ipynb  start_streamer.py  task_monitor.py  video_capture.py
tests/integration/: test_MQTT_publish.py
tests/test_smell_tempy_cli/: README.md  main_final_version.py
tests/test_smell_tempy_cli/assets/: report_generator.py  report_generator_csv.py
tests/test_smell_tempy_cli/report/: test_smell_csv_log.csv  test_smell_report_web_page.html
tests/test_smell_tempy_cli/versions_control/v1/: ES_main_v1.py
tests/unit/: test_face_recognition.py  test_person_detection.py  test_weapon_detection.py
vision/: __main__.py
vision/components/: config.yaml
vision/components/comm/: __init__.py  communication_base.py  mqtt_comm.py  vision_comm_mqtt.py
vision/components/vision/: __init__.py  download_retina_face_model.py  face_recognition.py  image_processing.py  person_detection.py  weapon_detection.py
vision/id_db/crops/: ds_model_vggface_detector_opencv_unaligned_normalization_base_expand_0.pkl
vision/notebook/: MQTT_publish.ipynb
